2013-09-04  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_events.php,
	  include/javascript/pandora_events.js: Added 'ID extra' to the event
	  details.

2013-09-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_groups.php, operation/agentes/group_view.php:
	fixed the links (now use constants instead the magic number and
	unicorns) to the filtered list of modules.

2013-09-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed typing bugs...yes I wrote a lot
	of them, sorry.

2013-09-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php: into the function "ui_pagination"
	added the parameter "print_total_items" to show the total of
	item in the list. It is showed althought the pagination does not.
	
	* operation/agentes/estado_agente.php: changed to don't show the
	total in the pagination block in the bottom.

2013-09-03  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	  godmode/tag/tag.php,
	  godmode/tag/edit_tag.php,
	  pandoradb.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql,
	  pandoradb_data.sql: Added support for tag phone information.

2013-09-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/tree.php, include/functions_treeview.php: improved the
	source code style.
	
	* operation/search_agents.getdata.php: added to search for the
	main address of agent.

2013-09-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/massive/massive_edit_modules.php: added field "ip_target"
	for to massive edit module.

2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/servers/servers.build_table.php: fixed the tooltip for
	lag column.
	
	Fixes: #2378

2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: set the first default server
	when create a new agent.
	